sdk_tests/tests/read-write-macro-fail/generic_state_name_collide_lifetime.stderr
error: proc-macro derive panicked
 --> tests/read-write-macro-fail/generic_state_name_collide_lifetime.rs:4:10
  |
4 | #[derive(ReadWriteState)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: Lifetime name ReadSomeState collides with generated type name.

error[E0392]: parameter `'ReadSomeState` is never used
 --> tests/read-write-macro-fail/generic_state_name_collide_lifetime.rs:5:18
  |
5 | struct SomeState<'ReadSomeState> { }
  |                  ^^^^^^^^^^^^^^ unused parameter
  |
  = help: consider removing `'ReadSomeState`, referring to it in a field, or using a marker such as `PhantomData`
